--- a/app/resources/cy/translation/citizenshub.json
+++ b/app/resources/cy/translation/citizenshub.json
@@ -10,7 +10,7 @@
   "progressBarStep1Done": "Mae’r cais wedi cyrraedd",
   "progressBarStep2Done": "Mae’r dogfennau wedi cyrraedd",
   "progressBarStep3Done": "Mae’r cais yn cael ei adolygu",
-  "progressBarStep3Reviewed": "Application has been reviewed",
+  "progressBarStep3Reviewed": "Mae'r cais wedi cael ei adolygu",
   "progressBarStep4Done": "Mae'r grant wedi'i gyhoeddi",
   "progressBarStep2NotDone": "Nid yw’r dogfennau wedi cyrraedd eto",
   "progressBarStep3NotDone": "Nid yw’r cais yn cael ei adolygu ar hyn o bryd",
