DTSPB-4775: Break out text content into different elements for a11y

--- a/app/resources/en/translation/citizenshub.json
+++ b/app/resources/en/translation/citizenshub.json
@@ -38,8 +38,10 @@
   "caseClosedHeading": "Case closed.",
   "caseClosedParagraph": "We have not issued your grant.<br><br>Check your email for more information.",
   "grantIssuedHeading": "We’ve issued your grant.",
-  "grantIssuedParagraph1": "You should get the grant within 2 week of it being issued.<br><br>If there’s anything wrong with the probate document, return it to the district probate registry listed on the grant.<br><br><strong>Helpful Information</strong>",
-  "grantIssuedParagraph2": "Find out what to do <a href=\"https://www.gov.uk/applying-for-probate/after-youve-applied\" class=\"govuk-link\" target=\"_blank\">when you receive your grant</a><br><br>Order more copies of your grant using the <a href=\"https://www.gov.uk/search-will-probate\" class=\"govuk-link\" target=\"_blank\">Search probate records for documents and wills</a> service.<br><br>If you ordered copies of your probate document for use outside the UK, also known as ‘sealed and certified’ copies, these will take upto 2 weeks longer to arrive than your UK copy.",
+  "grantIssuedParagraph1": "You should get the grant within 2 week of it being issued.",
+  "grantIssuedParagraph2": "If there’s anything wrong with the probate document, return it to the district probate registry listed on the grant.",
+  "helpfulInformationHeading": "Helpful Information",
+  "grantIssuedParagraph3": "Find out what to do <a href=\"https://www.gov.uk/applying-for-probate/after-youve-applied\" class=\"govuk-link\" target=\"_blank\">when you receive your grant</a><br><br>Order more copies of your grant using the <a href=\"https://www.gov.uk/search-will-probate\" class=\"govuk-link\" target=\"_blank\">Search probate records for documents and wills</a> service.<br><br>If you ordered copies of your probate document for use outside the UK, also known as ‘sealed and certified’ copies, these will take upto 2 weeks longer to arrive than your UK copy.",
   "declarationPdf": "View my legal declaration (10kb PDF)",
   "checkAnswersPdf": "View my probate application (10kb PDF)",
   "sideBarHeading": "I want to...",
