--- a/app/resources/en/translation/thankyou.json
+++ b/app/resources/en/translation/thankyou.json
@@ -14,6 +14,8 @@
   "progressBarStep2NotDone": "Documents have not yet been received",
   "progressBarStep3NotDone": "Application is not yet in review",
   "progressBarStep4NotDone": "Grant has not yet been issued",
+  "applicationProgressBar": "Application progress bar",
+  "applicationProgressBarListItems": "Application progress bar list items",
   "paragraph2": "You can <a href=\"/citizens-hub\" class=\"govuk-link\" rel=\"external noopener\">sign in to your account to view your application progress</a> at any time.",
   "declarationPdf": "Download your legal declaration (30kb PDF)",
   "checkAnswersPdf": "Download your answers (10kb PDF)",
