DTSPB-4451 Accessibility Meaningful Progressbar (#2505)
* DTSPB-4451 Accessibility Meaningful Progressbar

* DTSPB-4451 update for the Welsh Text

* DTSPB-4451 update progress on thankyou page

* DTSPB-4451 fix thanksyou page component test

* DTSPB-4451 update missing aria-label

* DTSPB-4451 update progress bar aria label

* DTSPB-4451 fix the CVE

* DTSPB-4451 update thankyou page progressbar

* DTSPB-4727 fix stop 3 in progress bar for accessibility

* DTSPB-4727 adding , 'progressBarStep3Reviewed' to step 3

* DTSPB-4451 adding welsh text for application has been reviewed

* DTSPB-4451 remove incorrect aria-content

* DTSPB-4451 add aria label to progress bar

* DTSPB-4451 suppress multer CVE

--- a/app/resources/cy/translation/citizenshub.json
+++ b/app/resources/cy/translation/citizenshub.json
@@ -7,6 +7,16 @@
   "progressBarStep3": "Cais yn cael ei adolygu",
   "progressBarStep4": "Grant <br>wedi’i gyhoeddi",
   "latestInfo": "Yr wybodaeth ddiweddaraf",
+  "progressBarStep1Done": "Mae’r cais wedi cyrraedd",
+  "progressBarStep2Done": "Mae’r dogfennau wedi cyrraedd",
+  "progressBarStep3Done": "Mae’r cais yn cael ei adolygu",
+  "progressBarStep3Reviewed": "Mae'r cais wedi cael ei adolygu",
+  "progressBarStep4Done": "Mae'r grant wedi'i gyhoeddi",
+  "progressBarStep2NotDone": "Nid yw’r dogfennau wedi cyrraedd eto",
+  "progressBarStep3NotDone": "Nid yw’r cais yn cael ei adolygu ar hyn o bryd",
+  "progressBarStep4NotDone": "Nid yw'r grant wedi'i gyhoeddi eto",
+  "applicationProgressBar": "Bar cynnydd y cais",
+  "applicationProgressBarListItems": "Rhestr o eitemau bar cynnydd y cais",
   "provideInfo": "Darparu gwybodaeth",
   "applicationReceivedHeading": "Rydym wedi cael eich cais.",
   "applicationReceivedParagraph": "Bydd gweithiwr achos yn adolygu eich cais ar ôl i ni gael a gwirio eich dogfennau.<br><br>I osgoi unrhyw oedi wrth adolygu eich cais, rhaid i chi <a href=\"/documents\" class=\"govuk-link\">anfon yr ewyllys wreiddiol atom ac unrhyw ddogfennau eraill rydym wedi gofyn amdanynt</a>.<br><br>Byddwn yn anfon e-bost atoch pan fyddwn wedi cael eich dogfennau. Efallai y bydd oedi o hyd at 2 wythnos ar ôl i ni gael eich dogfennau ac anfon yr e-bost.<br><br>Gan amlaf, byddwch yn cael y grant o fewn 12 wythnos. Gall gymryd mwy o amser os bydd angen i chi ddarparu gwybodaeth ychwanegol. Byddwn yn anfon e-bost atoch os byddwn angen mwy o wybodaeth.",
