--- a/app/resources/cy/translation/thankyou.json
+++ b/app/resources/cy/translation/thankyou.json
@@ -7,6 +7,15 @@
   "progressBarStep2": "Dogfennau wedi cyrraedd",
   "progressBarStep3": "Cais yn cael ei adolygu",
   "progressBarStep4": "Grant <br> wedi’i gyhoeddi",
+  "progressBarStep1Done": "Mae’r cais wedi cyrraedd",
+  "progressBarStep2Done": "Mae’r dogfennau wedi cyrraedd",
+  "progressBarStep3Done": "Mae’r cais yn cael ei adolygu",
+  "progressBarStep4Done": "Mae'r grant wedi'i gyhoeddi",
+  "progressBarStep2NotDone": "Nid yw’r dogfennau wedi cyrraedd eto",
+  "progressBarStep3NotDone": "Nid yw’r cais yn cael ei adolygu ar hyn o bryd",
+  "progressBarStep4NotDone": "Nid yw'r grant wedi'i gyhoeddi eto",
+  "applicationProgressBar": "Bar cynnydd y cais",
+  "applicationProgressBarListItems": "Rhestr o eitemau bar cynnydd y cais",
   "paragraph2": "Gallwch <a href=\"/citizens-hub\" class=\"govuk-link\" target=\"_blank\" rel=\"external noopener\" aria-label=\"fewngofnodi i’ch cyfrif i weld cynnydd eich cais\">fewngofnodi i’ch cyfrif i weld cynnydd eich cais</a> ar unrhyw bryd.",
   "declarationPdf": "Lawrlwytho eich datganiad cyfreithiol (30kb PDF)",
   "checkAnswersPdf": "Lawrlwytho eich atebion (10kb PDF)",
