--- a/app/resources/en/translation/citizenshub.json
+++ b/app/resources/en/translation/citizenshub.json
@@ -6,6 +6,16 @@
   "progressBarStep2": "Documents received",
   "progressBarStep3": "Application in review",
   "progressBarStep4": "Grant <br>issued",
+  "progressBarStep1Done": "Application has been received",
+  "progressBarStep2Done": "Documents have been received",
+  "progressBarStep3Done": "Application is in review",
+  "progressBarStep3Reviewed": "Application has been reviewed",
+  "progressBarStep4Done": "Grant has been issued",
+  "progressBarStep2NotDone": "Documents have not yet been received",
+  "progressBarStep3NotDone": "Application is not yet in review",
+  "progressBarStep4NotDone": "Grant has not yet been issued",
+  "applicationProgressBar": "Application progress bar",
+  "applicationProgressBarListItems": "Application progress bar list items",
   "latestInfo": "Latest information",
   "provideInfo": "Provide information",
   "applicationReceivedHeading": "We’ve received your application.",
