--- a/app/resources/en/translation/thankyou.json
+++ b/app/resources/en/translation/thankyou.json
@@ -7,6 +7,15 @@
   "progressBarStep2": "Documents received",
   "progressBarStep3": "Application in review",
   "progressBarStep4": "Grant <br>issued",
+  "progressBarStep1Done": "Application has been received",
+  "progressBarStep2Done": "Documents have been received",
+  "progressBarStep3Done": "Application is in review",
+  "progressBarStep4Done": "Grant has been issued",
+  "progressBarStep2NotDone": "Documents have not yet been received",
+  "progressBarStep3NotDone": "Application is not yet in review",
+  "progressBarStep4NotDone": "Grant has not yet been issued",
+  "applicationProgressBar": "Application progress bar",
+  "applicationProgressBarListItems": "Application progress bar list items",
   "paragraph2": "You can <a href=\"/citizens-hub\" class=\"govuk-link\" rel=\"external noopener\">sign in to your account to view your application progress</a> at any time.",
   "declarationPdf": "Download your legal declaration (30kb PDF)",
   "checkAnswersPdf": "Download your answers (10kb PDF)",
