DTSPB-4699: Remove redundant sentence

--- a/app/resources/en/translation/citizenshub.json
+++ b/app/resources/en/translation/citizenshub.json
@@ -28,7 +28,7 @@
   "applicationReviewParagraph": "You’ll usually get the grant within 12 weeks of submitting your application. It can take longer if you need to provide additional information. We’ll email you if we need more information.",
   "caseStoppedHeading": "We need more information to progress your application",
   "caseStoppedParagraph": "We have sent you an email with more details. If you have already responded and provided the requested information, you can ignore this message – your application is now being reviewed.<br><br>You'll usually get the grant within 12 weeks of when we receive your application. It may take longer as you needed to provide additional information.",
-  "caseStoppedParagraph1": "We have reviewed your application for probate. You need to provide some additional information before your application can progress.",
+  "caseStoppedParagraph1": "We have reviewed your application for probate.",
   "caseStoppedParagraph2": "A caseworker has sent you an email with the information they need.",
   "caseStoppedSubheading": "Providing information",
   "caseStoppedParagraph3": "Read the caseworker’s reasons for stopping the application and provide the information they’ve asked for.",
