DTSPB-4699: Remove Welsh

--- a/app/resources/cy/translation/citizenshub.json
+++ b/app/resources/cy/translation/citizenshub.json
@@ -28,7 +28,7 @@
   "applicationReviewParagraph": "Gan amlaf, byddwch yn cael y grant fewn 12 wythnos i chi gyflwyno eich cais. Gall gymryd mwy o amser os bydd angen i chi ddarparu gwybodaeth ychwanegol. Byddwn yn anfon e-bost atoch os byddwn angen mwy o wybodaeth.",
   "caseStoppedHeading": "Rydym angen mwy o wybodaeth i symud eich cais ymlaen",
   "caseStoppedParagraph": "Rydym wedi anfon e-bost atoch gyda mwy o fanylion. Os ydych eisoes wedi ymateb ac wedi darparu’r wybodaeth y gofynnwyd amdani, gallwch anwybyddu’r neges hon - mae eich cais nawr yn cael ei adolygu.<br><br>Gan amlaf, byddwch yn cael y grant fewn 12 wythnos i ni gael eich cais. Gall gymryd mwy o amser gan bod angen i chi ddarparu gwybodaeth ychwanegol.",
-  "caseStoppedParagraph1": "Rydym wedi adolygu eich cais am brofiant. Mae angen ichi ddarparu rhagor o wybodaeth cyn y gall y cais fynd yn ei flaen.",
+  "caseStoppedParagraph1": "Rydym wedi adolygu eich cais am brofiant.",
   "caseStoppedParagraph2": "Mae gweithiwr achos wedi anfon neges e-bost atoch gyda’r wybodaeth y maent ei hangen.",
   "caseStoppedSubheading": "Darparu gwybodaeth",
   "caseStoppedParagraph3": "Darllenwch resymau’r gweithiwr achos dros atal y cais a darparwch yr wybodaeth y maent wedi gofyn amdani.",
