DTSPB-4673 Update the Accessibility statement 2

--- a/app/resources/cy/translation/static/accessibility.json
+++ b/app/resources/cy/translation/static/accessibility.json
@@ -14,8 +14,8 @@
 
   "heading2": "Pa mor hygyrch yw&rsquo;r wefan hon",
   "paragraph6": "Gwyddwn nad yw rhai rhannau o&rsquo;r wefan hon yn gwbl hygyrch:",
-  "list2-item1": "Nid yw canlyniadau&rsquo;r cyfleuster chwilio am gyfeiriad yn chwyddo ar rai tabledi. Mae hyn yn gyfyngiad o fewn porwyr rhai tabledi.",
-  "list2-item2": "Mae problemau hygyrchedd yn parhau y tu allan i&rsquo;r gwasanaeth hwn, yng ngwasanaeth taliadau&rsquo;r llywodraeth, a allai arwain at ddefnyddwyr technoleg hygyrch yn cael anawsterau gyda defnyddio&rsquo;r gwasanaeth hwn.",
+  "list2-item1": "Nid yw canlyniadau&rsquo;r cyfleuster chwilio am gyfeiriad yn chwyddo ar rai tabledi - mae hyn yn gyfyngiad o fewn porwyr rhai tabledi.",
+  "list2-item2": "Mae problemau hygyrchedd yn parhau y tu allan i&rsquo;r gwasanaeth hwn, yng ngwasanaeth taliadau&rsquo;r llywodraeth GOV.UK Pay, a allai arwain at ddefnyddwyr technoleg hygyrch yn cael anawsterau gyda defnyddio&rsquo;r gwasanaeth hwn.",
 
   "heading3": "Adborth a gwybodaeth gyswllt",
   "paragraph7": "Os ydych angen gwybodaeth sydd ar y wefan hon mewn fformat gwahanol fel PDF hygyrch, print bras, fersiwn hawdd ei ddarllen neu Braille:",
