--- a/app/resources/en/translation/static/accessibility.json
+++ b/app/resources/en/translation/static/accessibility.json
@@ -9,13 +9,13 @@
   "list1-item3": "navigate most of the website using just a keyboard",
   "list1-item4": "navigate most of the website using speech recognition software",
   "list1-item5": "listen to most of the website using a screen reader (including the most recent versions of JAWS, NVDA and VoiceOver)",
-  "paragraph4": "We&rsquo;ve also made the website text as simple as possible to understand.",
-  "paragraph5": "<a href=\"{myAbilityLink}\" class=\"govuk-link\" target=\"_blank\" rel=\"external noopener\" aria-label=\"AbilityNet (opens in a new window)\">AbilityNet (opens in a new window)</a> has advice on making your device easier to use if you have a disability.",
+  "paragraph4": "We have also made the website text as simple as possible to understand.",
+  "paragraph5": "<a href=\"{myAbilityLink}\" class=\"govuk-link\" target=\"_blank\" rel=\"external noopener\" aria-label=\"AbilityNet (opens in a new tab)\">AbilityNet (opens in a new tab)</a> has advice on making your device easier to use if you have a disability.",
 
   "heading2": "How accessible this website is",
   "paragraph6": "We know some parts of this website are not fully accessible:",
-  "list2-item1": "The address lookup tool’s results do not magnify on some tablets. This a constraint within some tablet browsers.",
-  "list2-item2": "There are outstanding accessibility issues outside of this service, in the government payments service, which may result in accessible technology users having difficulties using this area.",
+  "list2-item1": "The address lookup tool’s results do not magnify on some devices - This a constraint within some browsers.",
+  "list2-item2": "There are outstanding accessibility issues outside of this service, in the government payments service  GOV.UK Pay, which may result in accessible technology users having difficulties using this area.",
 
   "heading3": "Feedback and contact information",
   "paragraph7": "If you need information on this website in a different format like accessible PDF, large print, easy read or braille:",
