DTSPB-4673 Update the Accessibility statement 2

--- a/app/resources/cy/translation/static/accessibility.json
+++ b/app/resources/cy/translation/static/accessibility.json
@@ -18,7 +18,7 @@
   "list2-item2": "Mae problemau hygyrchedd yn parhau y tu allan i&rsquo;r gwasanaeth hwn, yng ngwasanaeth taliadau&rsquo;r llywodraeth GOV.UK Pay, a allai arwain at ddefnyddwyr technoleg hygyrch yn cael anawsterau gyda defnyddio&rsquo;r gwasanaeth hwn.",
 
   "heading3": "Adborth a gwybodaeth gyswllt",
-  "paragraph7": "Os ydych angen gwybodaeth sydd ar y wefan hon mewn fformat gwahanol fel PDF hygyrch, print bras, fersiwn hawdd ei ddarllen neu Braille:",
+  "paragraph7": "Os ydych angen gwybodaeth sydd ar y wefan hon mewn fformat gwahanol fel PDF hygyrch, print bras, fersiwn hawdd ei ddarllen neu Braille; cysylltwch â",
   "list3-item1": "anfonwch e-bost i:<a href=\"mailto:HMCTSforms@justice.gov.uk\" class=\"govuk-link\">HMCTSforms@justice.gov.uk</a>",
   "list3-item2": "ffoniwch: {helpLineNumber}<br>{helpLineHours}",
   "paragraph8": "Byddwn yn ystyried eich cais ac yn ymateb o fewn 10 diwrnod gwaith.",
