--- a/app/resources/en/translation/static/accessibility.json
+++ b/app/resources/en/translation/static/accessibility.json
@@ -18,10 +18,10 @@
   "list2-item2": "There are outstanding accessibility issues outside of this service, in the government payments service  GOV.UK Pay, which may result in accessible technology users having difficulties using this area.",
 
   "heading3": "Feedback and contact information",
-  "paragraph7": "If you need information on this website in a different format like accessible PDF, large print, easy read or braille:",
+  "paragraph7": "If you need information on this website in a different format like accessible PDF, large print, easy read or braille, contact:",
   "list3-item1": "Email <a href=\"mailto:HMCTSforms@justice.gov.uk\" class=\"govuk-link\">HMCTSforms@justice.gov.uk</a>",
   "list3-item2": "call: {helpLineNumber}<br>{helpLineHours}",
-  "paragraph8": "We&rsquo;ll consider your request and get back to you within 10 working days.",
+  "paragraph8": "We will consider your request and get back to you within 10 working days.",
 
   "heading4": "Reporting accessibility problems with this website",
   "paragraph9": "We&rsquo;re always looking to improve the accessibility of this website. If you find any problems that are not listed on this page or think we&rsquo;re not meeting accessibility requirements, phone:",
