--- a/app/resources/en/translation/static/accessibility.json
+++ b/app/resources/en/translation/static/accessibility.json
@@ -20,13 +20,17 @@
   "heading3": "Feedback and contact information",
   "paragraph7": "If you need information on this website in a different format like accessible PDF, large print, easy read or braille, contact:",
   "list3-item1": "Email <a href=\"mailto:HMCTSforms@justice.gov.uk\" class=\"govuk-link\">HMCTSforms@justice.gov.uk</a>",
-  "list3-item2": "call: {helpLineNumber}<br>{helpLineHours}",
+  "list3-item2": "phone: {helpLineNumber}<br>{helpLineHours}",
   "paragraph8": "We will consider your request and get back to you within 10 working days.",
 
+  "heading3a": "Contacting us by phone or visiting us in person",
+  "paragraph8a": "We provide a text relay service for people who are D/deaf, hearing impaired or have a speech impediment.",
+  "paragraph8b": "Our offices have audio induction loops, or if you contact us before your visit we can arrange a British Sign Language (BSL) interpreter.",
+  "list3a-item1": "Contact us:<br>Phone: {helpLineNumber}<br>{helpLineHours}",
+
+
   "heading4": "Reporting accessibility problems with this website",
-  "paragraph9": "We&rsquo;re always looking to improve the accessibility of this website. If you find any problems that are not listed on this page or think we&rsquo;re not meeting accessibility requirements, phone:",
-  "list4-item1": "Email <a href=\"mailto:HMCTSforms@justice.gov.uk\" class=\"govuk-link\">HMCTSforms@justice.gov.uk</a> or phone:",
-  "list4-item2": "<strong>Probate helpline:</strong><br>Telephone: {helpLineNumber}<br>{helpLineHours}",
+  "paragraph9": "We&rsquo;re always looking to improve the accessibility of this website. If you find any problems that are not listed on this page or think we&rsquo;re not meeting accessibility requirements, contact us using the phone number above.",
   "paragraph10": "We&rsquo;ll consider your request and get back to you within 10 working days.",
 
   "heading5": "Enforcement procedure",
@@ -36,7 +40,7 @@
   "paragraph12": "We provide a text relay service for people who are D/deaf, hearing impaired or have a speech impediment.",
   "paragraph13": "Our offices have audio induction loops, or if you contact us before your visit we can arrange a British Sign Language (BSL) interpreter.",
   "paragraph14": "Find out how to contact us:",
-  "list5-item1": "Email <a href=\"mailto:HMCTSforms@justice.gov.uk\" class=\"govuk-link\">HMCTSforms@justice.gov.uk</a> or phone:",
+  "list5-item1": "email <a href=\"mailto:HMCTSforms@justice.gov.uk\" class=\"govuk-link\">HMCTSforms@justice.gov.uk</a> or phone:",
   "list5-item2": "<strong>Probate helpline:</strong><br>Telephone: {helpLineNumber}<br>{helpLineHours}",
 
 
