DTSPB-4673 add  missing  paragraph

--- a/app/resources/cy/translation/static/accessibility.json
+++ b/app/resources/cy/translation/static/accessibility.json
@@ -25,6 +25,7 @@
 
   "heading3a": "Cysylltu â ni dros y ffôn neu ymweld â ni’n bersonol",
   "paragraph8a": "Rydym yn darparu gwasanaeth cyfnewid negeseuon testun ar gyfer pobl fyddar, pobl sydd â nam ar eu clyw a phobl sydd â nam ar eu lleferydd.",
+  "paragraph8b": "Mae yna ddolenni sain yn ein swyddfeydd, neu os byddwch yn cysylltu â ni cyn eich ymweliad, gallwn drefnu cyfieithydd Iaith Arwyddion Prydain (BSL) ar eich cyfer.",
   "list3a-item1": "Cysylltwch â ni:<br>Rhif ffôn: {helpLineNumber}<br>{helpLineHours}",
 
   "heading4": "Riportio problemau hygyrchedd gyda&rsquo;r wefan hon",
