DTSPB-4673 fixing missing text

--- a/app/resources/cy/translation/static/accessibility.json
+++ b/app/resources/cy/translation/static/accessibility.json
@@ -47,7 +47,7 @@
   "paragraph15": "Mae GLlTEF wedi ymrwymo i sicrhau bod ei wefannau yn hygyrch, a hynny yn unol â Rheoliadau Hygyrchedd Cyrff y Sector Cyhoeddus (Gwefannau a Rhaglenni Symudol) (Rhif 2) 2018.",
 
   "heading8": "Statws cydymffurfiaeth",
-  "paragraph16": "Mae&rsquo;r wefan hon yn cydymffurfio&rsquo;n rhannol â <a href=\"{wcag21Link}\" target=\"_blank\" rel=\"external noopener\" class=\"govuk-link\" aria-label=\"safon AA Canllawiau Hygyrchedd Cynnwys Gwe fersiwn 2.1 (yn agor mewn tab newydd),\">safon AA Canllawiau Hygyrchedd Cynnwys Gwe fersiwn 2.1 (yn agor mewn ffenestr newydd),</a> a hynny oherwydd yr enghreifftiau o beidio â chydymffurfio a restrir isod.",
+  "paragraph16": "Mae&rsquo;r wefan hon yn cydymffurfio&rsquo;n rhannol â <a href=\"{wcag21Link}\" target=\"_blank\" rel=\"external noopener\" class=\"govuk-link\" aria-label=\"safon AA Canllawiau Hygyrchedd Cynnwys Gwe fersiwn 2.1 (yn agor mewn tab newydd),\">safon AA Canllawiau Hygyrchedd Cynnwys Gwe fersiwn 2.1 (yn agor mewn tab newydd),</a> a hynny oherwydd yr enghreifftiau o beidio â chydymffurfio a restrir isod.",
 
   "heading9": "Cynnwys anhygyrch",
   "paragraph17": "Mae&rsquo;r cynnwys a restrir isod yn anhygyrch am y rhesymau canlynol. Nid ydym wedi gallu gwirio ein bod yn llwyr gydymffurfio yn y meysydd canlynol, a hynny oherwydd cyfyngiadau gyda&rsquo;n adnoddau profi mewnol:",
