--- a/app/resources/en/translation/static/accessibility.json
+++ b/app/resources/en/translation/static/accessibility.json
@@ -34,7 +34,7 @@
   "paragraph10": "We&rsquo;ll consider your request and get back to you within 10 working days.",
 
   "heading5": "Enforcement procedure",
-  "paragraph11": "The Equality and Human Rights Commission (EHRC) is responsible for enforcing the Public Sector Bodies (Websites and Mobile Applications) (No. 2) Accessibility Regulations 2018 (the &lsquo;accessibility regulations&rsquo;). If you&rsquo;re not happy with how we respond to your complaint, <a href=\"{equalityAdvisorLink}\" target=\"_blank\" rel=\"external noopener\" class=\"govuk-link\" aria-label=\"contact the Equality Advisory and Support Service (EASS) (opens in a new window)\">contact the Equality Advisory and Support Service (EASS) (opens in a new tab)</a>.",
+  "paragraph11": "The Equality and Human Rights Commission (EHRC) is responsible for enforcing the Public Sector Bodies (Websites and Mobile Applications) (No. 2) Accessibility Regulations 2018 (the &lsquo;accessibility regulations&rsquo;). If you&rsquo;re not happy with how we respond to your complaint, <a href=\"{equalityAdvisorLink}\" target=\"_blank\" rel=\"external noopener\" class=\"govuk-link\" aria-label=\"contact the Equality Advisory and Support Service (EASS) (opens in a new tab)\">contact the Equality Advisory and Support Service (EASS) (opens in a new tab)</a>.",
 
   "heading6": "Contacting us by phone or visiting us in person",
   "paragraph12": "We provide a text relay service for people who are D/deaf, hearing impaired or have a speech impediment.",
@@ -48,7 +48,7 @@
   "paragraph15": "HMCTS is committed to making its websites accessible, in accordance with the Public Sector Bodies (Websites and Mobile Applications) (No. 2) Accessibility Regulations 2018.",
 
   "heading8": "Compliance Status",
-  "paragraph16": "The website is partially compliant with the <a href=\"{wcag21Link}\" target=\"_blank\" rel=\"external noopener\" class=\"govuk-link\" aria-label=\"Web Content Accessibility Guidelines version 2.1 AA standard (opens in a new window)\">Web Content Accessibility Guidelines version 2.1 AA standard (opens in a new tab)</a> due to the non-compliances listed below.",
+  "paragraph16": "The website is partially compliant with the <a href=\"{wcag21Link}\" target=\"_blank\" rel=\"external noopener\" class=\"govuk-link\" aria-label=\"Web Content Accessibility Guidelines version 2.1 AA standard (opens in a new tab)\">Web Content Accessibility Guidelines version 2.1 AA standard (opens in a new tab)</a> due to the non-compliances listed below.",
 
   "heading9": "Non-accessible content",
   "paragraph17": "The content listed below is non-accessible for the following reasons. We haven&rsquo;t been able to verify that we are fully compliant in the following areas, due to constraints with our internal testing tools:",
