DTSPB-4673 fixing missing text

--- a/app/resources/cy/translation/static/accessibility.json
+++ b/app/resources/cy/translation/static/accessibility.json
@@ -33,7 +33,7 @@
   "paragraph10": "Byddwn yn ystyried eich cais ac yn ymateb o fewn 10 diwrnod gwaith.",
 
   "heading5": "Y Weithdrefn Orfodi",
-  "paragraph11": "Y Comisiwn Cydraddoldeb a Hawliau Dynol (EHRC) sy&rsquo;n gyfrifol am orfodi Rheoliadau Hygyrchedd Cyrff y Sector Cyhoeddus (Gwefannau a Rhaglenni Symudol) (Rhif 2) 2018 (y &lsquo;rheoliadau hygyrchedd&rsquo;). Os ydych yn anhapus â&rsquo;r ffordd rydym yn ymateb i&rsquo;ch cwyn, <a href=\"{equalityAdvisorLink}\" target=\"_blank\" rel=\"external noopener\" class=\"govuk-link\" aria-label=\"cysylltwch â&rsquo;r Gwasanaeth Cynghori a Chefnogi Cydraddoldeb (EASS) (yn agor mewn ffenest newydd)\">cysylltwch â&rsquo;r Gwasanaeth Cynghori a Chefnogi Cydraddoldeb (EASS) (agor mewn tab newydd)</a>.",
+  "paragraph11": "Y Comisiwn Cydraddoldeb a Hawliau Dynol (EHRC) sy&rsquo;n gyfrifol am orfodi Rheoliadau Hygyrchedd Cyrff y Sector Cyhoeddus (Gwefannau a Rhaglenni Symudol) (Rhif 2) 2018 (y &lsquo;rheoliadau hygyrchedd&rsquo;). Os ydych yn anhapus â&rsquo;r ffordd rydym yn ymateb i&rsquo;ch cwyn, <a href=\"{equalityAdvisorLink}\" target=\"_blank\" rel=\"external noopener\" class=\"govuk-link\" aria-label=\"cysylltwch â&rsquo;r Gwasanaeth Cynghori a Chefnogi Cydraddoldeb (EASS) (agor mewn tab newydd)\">cysylltwch â&rsquo;r Gwasanaeth Cynghori a Chefnogi Cydraddoldeb (EASS) (agor mewn tab newydd)</a>.",
 
   "heading6": "Cysylltu â ni dros y ffôn neu ymweld â ni&rsquo;n bersonol",
   "paragraph12": "Rydym yn darparu gwasanaeth cyfnewid negeseuon testun ar gyfer pobl fyddar, pobl sydd â nam ar eu clyw a phobl sydd â nam ar eu lleferydd.",
