DTSPB-4673 fixing missing target="_blank"

--- a/app/resources/en/translation/static/accessibility.json
+++ b/app/resources/en/translation/static/accessibility.json
@@ -1,7 +1,7 @@
 {
   "title": "Accessibility statement",
   "heading1": "Accessibility statement for the &lsquo;Apply for probate&rsquo; service",
-  "paragraph1": "This accessibility statement applies to <a href=\"{applyForProbateFrontpage}\"class=\"govuk-link\" rel=\"external noopener\"\">Apply for probate - GOV.UK (opens in a new tab)</a>",
+  "paragraph1": "This accessibility statement applies to <a href=\"{applyForProbateFrontpage}\"class=\"govuk-link\" target=\"_blank\" rel=\"external noopener\"\">Apply for probate - GOV.UK (opens in a new tab)</a>",
   "paragraph2": "This service allows users to apply for a grant of representation (also known as probate) online.",
   "paragraph3": "This website is run by HM Courts and Tribunals (HMCTS). We want as many people as possible to be able to use this website, so we have designed it to be accessible. For example, that means you should be able to:",
   "list1-item1": "change colours, contrast levels and fonts",
