DTSPB-4673 fixing text issue

--- a/app/resources/cy/translation/static/accessibility.json
+++ b/app/resources/cy/translation/static/accessibility.json
@@ -68,7 +68,7 @@
   "list7-item5": "tudalennau cyfarwyddiadau ar GOV.UK, er enghraifft <a href=\"{deathReportedToCoroner}\" class=\"govuk-link\" target=\"_blank\" rel=\"external noopener\" aria-label=\"Pan fydd marwolaeth yn cael ei gofnodi gan grwner - GOV.UK (yn agor mewn tab newydd)\">Pan fydd marwolaeth yn cael ei gofnodi gan grwner - GOV.UK (yn agor mewn tab newydd)</a>",
   "list7-item6": "Y gwasanaeth sgwrsio dros y we yn Saesneg sy&rsquo;n cynnig cefnogaeth byw i ddefnyddwyr",
 
-  "heading11": "Beth rydym yn ei wneud i wella hygyrchedd y gwasanaeth hwn",
+  "heading11": "Beth rydym yn ei wneud i wella hygyrchedd",
   "paragraph20": "Rydym yn cynnal profion hygyrchedd yn rheolaidd fel rhan o&rsquo;n arferion datblygu ac yn datrys unrhyw broblemau cyn i wefannau a swyddogaethau newydd gael eu rhyddhau. Rydym yn defnyddio Pa11y ac Axe gyda&rsquo;n prosesau sicrhau ansawdd.<br><br>Mae&rsquo;r wefan yn cael ei phrofi&rsquo;n barhaus gan ddefnyddio meddalwedd hygyrchedd. Bydd unrhyw nodweddion newydd a fydd yn cael eu cyflwyno hefyd yn cael eu profi&rsquo;n fewnol neu gan y Ganolfan Hygyrchedd Digidol (DAC).",
 
   "heading12": "Paratoi&rsquo;r datganiad hygyrchedd hwn",
