--- a/app/resources/cy/translation/static/accessibility.json
+++ b/app/resources/cy/translation/static/accessibility.json
@@ -2,7 +2,7 @@
   "title": "Datganiad Hygyrchedd",
   "heading1": "Datganiad hygyrchedd ar gyfer y gwasanaeth &lsquo;Gwneud cais am brofiant&rsquo;",
   "paragraph1": "TMae’r datganiad hygyrchedd hwn yn berthnasol i <a href=\"{applyForProbateFrontpage}\"class=\"govuk-link\" target=\"_blank\" rel=\"external noopener\"\">gwneud cais am brofiant - GOV.UK (agor mewn tab newydd)</a>",
-  "paragraph2": "Mae&rsquo;r gwasanaeth hwn yn galluogi defnyddwyr i wneud cais am grant cynrychiolaeth ar-lein (a elwir hefyd yn profiant).",
+  "paragraph2": "Mae&rsquo;r gwasanaeth hwn yn galluogi defnyddwyr i wneud cais am grant cynrychiolaeth (a elwir hefyd yn profiant) ar-lein.",
   "paragraph3": "Gwasanaeth Llysoedd a Thribiwnlysoedd EF (GLlTEF) sy’n gyfrifol am y wefan hon. Rydym eisiau i gymaint o bobl â phosibl allu defnyddio'r wefan hon, felly rydym wedi ceisio ei gwneud mor hygyrch â phosibl. Er enghraifft, golyga hyn y dylech allu:",
   "list1-item1": "newid y lliwiau, y lefelau cyferbyniad a&rsquo;r ffontiau",
   "list1-item2": "gwneud y testun hyd at 300% yn fwy heb iddo ddiflannu oddi ar y sgrin",
@@ -14,12 +14,12 @@
 
   "heading2": "Pa mor hygyrch yw&rsquo;r wefan hon",
   "paragraph6": "Gwyddwn nad yw rhai rhannau o&rsquo;r wefan hon yn gwbl hygyrch:",
-  "list2-item1": "Nid yw canlyniadau&rsquo;r cyfleuster chwilio am gyfeiriad yn chwyddo ar rai tabledi - mae hyn yn gyfyngiad o fewn porwyr rhai tabledi.",
-  "list2-item2": "Mae problemau hygyrchedd yn parhau y tu allan i&rsquo;r gwasanaeth hwn, yng ngwasanaeth taliadau&rsquo;r llywodraeth GOV.UK Pay, a allai arwain at ddefnyddwyr technoleg hygyrch yn cael anawsterau gyda defnyddio&rsquo;r gwasanaeth hwn.",
+  "list2-item1": "Nid yw canlyniadau&rsquo;r adnodd chwilio cyfeiriadau yn chwyddo ar rai tabledi - mae hyn yn gyfyngiad o fewn rhai porwyr tabledi.",
+  "list2-item2": "Mae problemau hygyrchedd yn parhau y tu allan i&rsquo;r gwasanaeth hwn, yng ngwasanaeth taliadau&rsquo;r llywodraeth GOV.UK Pay, a allai arwain at ddefnyddwyr technoleg hygyrch yn cael anawsterau gyda defnyddio&rsquo;r man hwn.",
 
   "heading3": "Adborth a gwybodaeth gyswllt",
-  "paragraph7": "Os ydych angen gwybodaeth sydd ar y wefan hon mewn fformat gwahanol fel PDF hygyrch, print bras, fersiwn hawdd ei ddarllen neu Braille; cysylltwch â",
-  "list3-item1": "anfonwch e-bost i:<a href=\"mailto:HMCTSforms@justice.gov.uk\" class=\"govuk-link\">HMCTSforms@justice.gov.uk</a>",
+  "paragraph7": "Os oes angen gwybodaeth arnoch ar y wefan hon mewn fformat gwahanol fel PDF hygyrch, print bras, hawdd ei ddarllen neu Braille; cysylltwch â",
+  "list3-item1": "e-bost:<a href=\"mailto:HMCTSforms@justice.gov.uk\" class=\"govuk-link\">HMCTSforms@justice.gov.uk</a>",
   "list3-item2": "ffôn: {helpLineNumber}<br>{helpLineHours}",
   "paragraph8": "Byddwn yn ystyried eich cais ac yn ymateb o fewn 10 diwrnod gwaith.",
 
@@ -33,7 +33,7 @@
   "paragraph10": "Byddwn yn ystyried eich cais ac yn ymateb o fewn 10 diwrnod gwaith.",
 
   "heading5": "Y Weithdrefn Orfodi",
-  "paragraph11": "Y Comisiwn Cydraddoldeb a Hawliau Dynol (EHRC) sy&rsquo;n gyfrifol am orfodi Rheoliadau Hygyrchedd Cyrff y Sector Cyhoeddus (Gwefannau a Rhaglenni Symudol) (Rhif 2) 2018 (y &lsquo;rheoliadau hygyrchedd&rsquo;). Os ydych yn anhapus â&rsquo;r ffordd rydym yn ymateb i&rsquo;ch cwyn, <a href=\"{equalityAdvisorLink}\" target=\"_blank\" rel=\"external noopener\" class=\"govuk-link\" aria-label=\"cysylltwch â&rsquo;r Gwasanaeth Cynghori a Chefnogi Cydraddoldeb (EASS) (agor mewn tab newydd)\">cysylltwch â&rsquo;r Gwasanaeth Cynghori a Chefnogi Cydraddoldeb (EASS) (agor mewn tab newydd)</a>.",
+  "paragraph11": "Y Comisiwn Cydraddoldeb a Hawliau Dynol (EHRC) sy&rsquo;n gyfrifol am orfodi Rheoliadau Hygyrchedd Cyrff y Sector Cyhoeddus (Gwefannau a Rhaglenni Symudol) (Rhif 2) 2018 (y &lsquo;rheoliadau hygyrchedd&rsquo;). Os nad ydych chi’n fodlon gyda’r ffordd rydym yn ymateb i’ch cwyn, <a href=\"{equalityAdvisorLink}\" target=\"_blank\" rel=\"external noopener\" class=\"govuk-link\" aria-label=\"cysylltwch â&rsquo;r Gwasanaeth Cynghori a Chymorth Cydraddoldeb (EASS) (agor mewn tab newydd)\">cysylltwch â&rsquo;r Gwasanaeth Cynghori a Chymorth Cydraddoldeb (EASS) (agor mewn tab newydd)</a>.",
 
   "heading6": "Cysylltu â ni dros y ffôn neu ymweld â ni&rsquo;n bersonol",
   "paragraph12": "Rydym yn darparu gwasanaeth cyfnewid negeseuon testun ar gyfer pobl fyddar, pobl sydd â nam ar eu clyw a phobl sydd â nam ar eu lleferydd.",
@@ -44,7 +44,7 @@
 
 
   "heading7": "Gwybodaeth dechnegol am hygyrchedd y wefan hon",
-  "paragraph15": "Mae GLlTEF wedi ymrwymo i sicrhau bod ei wefannau yn hygyrch, a hynny yn unol â Rheoliadau Hygyrchedd Cyrff y Sector Cyhoeddus (Gwefannau a Rhaglenni Symudol) (Rhif 2) 2018.",
+  "paragraph15": "Mae GLlTEF wedi ymrwymo i sicrhau bod ei wefannau yn hygyrch, a hynny yn unol â Rheoliadau Hygyrchedd Cyrff y Sector Gyhoeddus (Gwefannau a Rhaglenni Symudol) (Rhif 2) 2018.",
 
   "heading8": "Statws cydymffurfiaeth",
   "paragraph16": "Mae&rsquo;r wefan hon yn cydymffurfio&rsquo;n rhannol â <a href=\"{wcag21Link}\" target=\"_blank\" rel=\"external noopener\" class=\"govuk-link\" aria-label=\"safon AA Canllawiau Hygyrchedd Cynnwys Gwe fersiwn 2.1 (yn agor mewn tab newydd),\">safon AA Canllawiau Hygyrchedd Cynnwys Gwe fersiwn 2.1 (yn agor mewn tab newydd),</a> a hynny oherwydd yr enghreifftiau o beidio â chydymffurfio a restrir isod.",
@@ -60,7 +60,7 @@
   "heading10-1": "Dogfennau PDF a dogfennau eraill",
   "paragraph18": "Mae&rsquo;n bosib na fydd dogfennau PDF, dogfennau eraill ac atodiadau mewn negeseuon e-bost a gyhoeddwyd cyn 23 Medi 2018 yn cydymffurfio â&rsquo;r safonau hygyrchedd. Er enghraifft, efallai nad ydynt wedi&rsquo;u strwythuro fel eu bod yn hygyrch i raglen darllen sgrîn.",
   "heading10-2": "Cynnwys trydydd parti sydd dan reolaeth rhywun arall",
-  "paragraph19": "Efallai na fydd tudalennau a gwefannau sy&rsquo;n berthnasol i&rsquo;r gwasanaeth profiant yn gwbl hygyrch. Mae&rsquo;r rhain yn cynnwys:",
+  "paragraph19": "Efallai na fydd tudalennau a gwefannau sy&rsquo;n berthnasol i&rsquo;r gwasanaeth profiant yn gwbwl hygyrch. Mae&rsquo;r rhain yn cynnwys:",
   "list7-item1": "Tudalennau allanol sy&rsquo;n cynnwys dogfennau PDF er enghraifft <a href=\"{applicationFormPA15}\" class=\"govuk-link\" target=\"_blank\" rel=\"external noopener\" aria-label=\"Ffurflen PA15  (yn agor mewn tab newydd)\">Ffurflen PA15 (yn agor mewn tab newydd)</a>",
   "list7-item2": "y tudalennau mewngofnodi – edrychwch ar ddatganiad hygyrchedd <a href=\"{hmctAccessAccessibilityStatement}\" class=\"govuk-link\" target=\"_blank\" rel=\"external noopener\" aria-label=\"HMCTS Access (yn agor mewn tab newydd)\">HMCTS Access (yn agor mewn tab newydd)</a> i gael rhagor o wybodaeth",
   "list7-item3": "tudalennau talu – edrychwch ar ddatganiad hygyrchedd <a href=\"{payAccessibilityStatement}\" class=\"govuk-link\" target=\"_blank\" rel=\"external noopener\" aria-label=\"GOV.UK Pay (yn agor mewn tab newydd)\">GOV.UK Pay (yn agor mewn tab newydd)</a> i gael rhagor o wybodaeth",
