--- a/app/resources/cy/translation/common.json
+++ b/app/resources/cy/translation/common.json
@@ -81,7 +81,7 @@
   "helpEmail": "ymholiadaucymraeg@justice.gov.uk",
   "helpTelephoneNumber": "0300 303 0654",
   "helpTelephoneOpeningHoursTitle": "Amseroedd agor (sgwrsio dros y we a'r ffôn)",
-  "helpTelephoneOpeningHours": "Dydd Llun i Ddydd Gwener, 9am - 1pm (ar gau ar wyliau banc)",
+  "helpTelephoneOpeningHours": "Dydd Llun i ddydd Iau, 9am – 5pm, dydd Gwener, 9am – 4.30pm",
   "helpTelephoneOpeningHours1": "Dydd Llun i ddydd Iau 9am – 5pm, dydd Gwener 9am - 4.30pm",
   "helpTelephoneOpeningHours2": "Ar gau ar ddyddiau Sadwrn, Sul a gwyliau banc",
   "helpChatDown": "Nid yw&rsquo;r gwasanaeth sgwrsio dros y we ar gael ar hyn o bryd, rhowch gynnig arall arni hwyrach ymlaen.",
